--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senong</title>
+    <link
+      href="https://cdn.bootcdn.net/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="app-loading"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
