--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Senong</title>
-    <link
+    <!-- <link
       href="https://cdn.bootcdn.net/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.css"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://use.fontawesome.com/releases/v6.4.2/css/all.css"
       rel="stylesheet"
     />
   </head>
