--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       if (setting === "dark" || (prefersDark && setting !== "light"))
         document.documentElement.classList.toggle("dark", true);
     })();
+
+    if (location.pathname === "/index.html") {
+      location.replace("/");
+    }
   </script>
   <body>
     <div
