feat: secret diary porn routes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     })();
 
     if (location.pathname === "/index.html") {
-      location.replace("/");
+      location.replace("/me/");
     }
   </script>
   <body>
