--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="revisit-after" content="7 days" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <!-- <link
       href="https://cdn.bootcdn.net/ajax/libs/MaterialDesign-Webfont/7.2.96/css/materialdesignicons.css"
       rel="stylesheet"
@@ -32,7 +32,6 @@
     if (location.pathname === "/index.html") {
       location.replace("/me/");
     }
-    
   </script>
   <body>
     <div
