--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     })();
 
     if (location.pathname === "/index.html") {
-      location.replace("/me/");
+      location.replace("/");
     }
   </script>
   <body>
